# wavecore-rs

./: Cargo.toml  README.md  WAVECORE_API_REFERENCE.md  WAVECORE_TECHNICAL_SPECIFICATION.md  WAVECORE_USER_GUIDE.md
bem/: Cargo.toml
bem/src/: airy_waves.rs  engines.rs  lib.rs  linear_solver.rs  problems.rs  results.rs  solver.rs  time_domain.rs
benchmarks/: Cargo.toml
benchmarks/benches/: bem_benchmarks.rs  green_functions_benchmarks.rs  matrix_benchmarks.rs  mesh_benchmarks.rs
bodies/: Cargo.toml
bodies/src/: dofs.rs  floating_body.rs  lib.rs
examples/: Cargo.toml  week3_demo.rs  week4_comprehensive_demo.rs
examples/src/: benchmark_example.rs  cylinder_example.rs  main.rs  ship_example.rs  sphere_example.rs  wavecore_library_test.rs  wavecore_rust_test.rs
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
gpu/: Cargo.toml
gpu/src/: device.rs  fallback.rs  kernels.rs  lib.rs  memory.rs  solver.rs
green_functions/: Cargo.toml
green_functions/src/: delhommeau.rs  fingreen3d.rs  hams.rs  liangwunoblesse.rs  lib.rs  simd_optimized.rs  utils.rs
include/: wavecore.h
io/: Cargo.toml
io/src/: file_io.rs  lib.rs  nemoh.rs  xarray.rs
matrices/: Cargo.toml
matrices/benches/: block_matrices.rs  linear_solvers.rs  matrix_operations.rs
matrices/io/src/: nemoh.rs  wamit.rs
matrices/src/: block.rs  lib.rs  operations.rs  solvers.rs  types.rs
meshes/: Cargo.toml
meshes/src/: collections.rs  lib.rs  mesh.rs  predefined.rs  quality.rs  refinement.rs
post_pro/: Cargo.toml
post_pro/src/: analysis.rs  lib.rs
resistance/: Cargo.toml
resistance/src/: added_resistance.rs  errors.rs  holtrop_mennen.rs  lib.rs  types.rs  validation.rs  windage.rs
scripts/: Cargo.toml  GRAFANA_DASHBOARD_GUIDE.md  QUICK_REFERENCE.md  README.md  TEST_CONFIGURATION_GUIDE.md  config-quick-dev.yml  config-standard.yml  config-stress.yml  config.yml.backup  debug-monitoring.sh  docker-compose.yml  restart-monitoring.sh  run-quick-test.sh  run-test.sh  start-monitoring.sh  status.sh  stop-monitoring.sh  switch-config.sh
scripts/monitoring/grafana/dashboards/: wavecore-comprehensive-dashboard.json  wavecore-simple-dashboard.json  wavecore-testing-dashboard.json
scripts/monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/monitoring/graphite/: statsd.conf  storage-aggregation.conf  storage-schemas.conf
scripts/src/: config.rs  config.rs.backup  main.rs  metrics.rs  metrics_collector.rs  metrics_server.rs  reporting.rs  statsd_client.rs  stress_testing.rs  types.rs
scripts/src/tests/: core.rs  extensions.rs  mod.rs  performance.rs  validation.rs
scripts/test_results/20250813_142806/: diffraction_detailed.json  diffraction_summary.md  hydrostatics_detailed.json  hydrostatics_summary.md  radiation_detailed.json  radiation_summary.md  rao_detailed.json  rao_summary.md  test_summary.md
scripts/test_results/20250817_234306/: diffraction_detailed.json  diffraction_summary.md  hydrostatics_detailed.json  hydrostatics_summary.md  radiation_detailed.json  radiation_summary.md  rao_detailed.json  rao_summary.md  test_summary.md
scripts/test_results/20250818_000743/: diffraction_detailed.json  diffraction_summary.md  hydrostatics_detailed.json  hydrostatics_summary.md  radiation_detailed.json  radiation_summary.md  rao_detailed.json  rao_summary.md  test_summary.md
ui/: Cargo.toml
ui/src/: advanced_cli.rs  cli.rs  lib.rs  web.rs
validation/: Cargo.toml
validation/src/: dtmb5415.rs  framework.rs  lib.rs  reference_data.rs  sphere.rs  statistics.rs  wigley.rs
