[package]
name = "wavecore-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Performance benchmarks for marine hydrodynamics"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
wavecore-bem = { path = "../bem" }
wavecore-green-functions = { path = "../green_functions" }
wavecore-meshes = { path = "../meshes" }
wavecore-matrices = { path = "../matrices" }

# External dependencies
criterion.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
rayon.workspace = true
approx.workspace = true
num-traits.workspace = true
num-complex.workspace = true

[[bench]]
name = "bem_benchmarks"
harness = false

[[bench]]
name = "green_functions_benchmarks"
harness = false

[[bench]]
name = "mesh_benchmarks"
harness = false

[[bench]]
name = "matrix_benchmarks"
harness = false 